# arkive-v4-wiki-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  bun.lockb  index.ts  package.json
src/: index.ts  main.rs
src/database/: db.ts  schema.sql  types.ts
src/database/queries/: characterQueries.ts  index.ts  ownershipCheck.ts
src/database/validation/: assets.ts  blueprint_instances.ts  blueprints.ts  calendars.ts  character_fields.ts  character_fields_templates.ts  characters.ts  conversations.ts  dictionaries.ts  documents.ts  edges.ts  event_groups.ts  events.ts  generic.ts  graphs.ts  index.ts  manuscripts.ts  map_pin_types.ts  map_pins.ts  maps.ts  messages.ts  months.ts  nodes.ts  projects.ts  random_table_options.ts  random_tables.ts  relationship_types.ts  search.ts  words.ts
src/enums/: entityEnums.ts  errors.ts  index.ts  requestEnums.ts
src/models/: app_state.rs  character.rs  entities.rs  mod.rs
src/routers/: index.ts  multiple_entity_router.ts  search_router.ts  single_entity_router.ts
src/types/: documentContentTypes.ts  entityTypes.ts  index.ts  requestTypes.ts
src/utils/: db_utils.rs  filterConstructor.ts  index.ts  orderByConstructor.ts  relationalQueryHelpers.ts  requestUtils.ts  utils.ts
