[package]
name = "arkive-v4-wiki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["json"] }
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokio = { version = "1.38.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["serde", "serde_json", "json", "tracing", "chrono"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
